test/errors/closure/access_closure_function_outside_scope.np
def outer():
    def inner():
        print("hello")
    inner()


inner()
